syntax = "proto3";

package polaris.metric.v2;

import "v2/ratelimit_v2.proto";

service RateLimitGRPCV2 {
  // 限流接口
  rpc Service(stream RateLimitRequest) returns(stream RateLimitResponse) {}

  //时间对齐接口
  rpc TimeAdjust(TimeAdjustRequest) returns(TimeAdjustResponse) {}
}
